--- a/app/views/contrats/index.html.erb
+++ b/app/views/contrats/index.html.erb
@@ -1,13 +1,13 @@
 
 <div class="table"><br/>
-<center><%= link_to 'Ajouter un employé', new_contrat_path, class: 'btn-medium' %><br/><br/></center>
+<center><%= link_to 'Ajouter un employé', new_employee_path, class: 'btn-medium' %><br/><br/></center>
 
   <% @contrats.each do |contrat| %>
   <div class="table-row">
     <%= contrat.nom %>
     <%= contrat.prenom %>
     <%= link_to ' Dernier contrat', contrat_path(contrat, format: 'pdf'), class: 'btn btn-medium btn-lg pull-right margin' %>
-    <%= link_to ' Nouveau contrat', edit_contrat_path(contrat), class: 'btn btn-medium btn-lg pull-right margin'   %>
+    <%= link_to ' Supprimer', contrat_path(contrat), method: :delete, class: 'btn btn-medium btn-lg pull-right margin' %>
 
 </div>
   <% end %>
