--- a/app/views/contrats/reporte.pdf.erb
+++ b/app/views/contrats/reporte.pdf.erb
@@ -168,15 +168,15 @@ Dont les cotisations de sécurité sociale sont versées sous le numéro :
 
   <div class="societe">
     <h4>
-    <% if @contrat.empcivilite.present? %>
-    <%= @contrat.empcivilite %>
-    <% end %> <% if @contrat.nom.present? %>
-    <%= @contrat.nom.capitalize %> <% end %><% if @contrat.prenom.present? %>
-    <%= @contrat.prenom %>
+    <% if @contrat.employee.empcivilite.present? %>
+    <%= @contrat.employee.empcivilite %>
+    <% end %> <% if @contrat.employee.nom.present? %>
+    <%= @contrat.employee.nom.capitalize %> <% end %><% if @contrat.employee.prenom.present? %>
+    <%= @contrat.employee.prenom %>
     <% end %> </h4>
     <p>
 
-<% if @contrat.empcivilite.present? && @contrat.empcivilite == "Monsieur" %>
+<% if @contrat.employee.empcivilite.present? && @contrat.employee.empcivilite == "Monsieur" %>
 Né le :
 <% else %>
 Née le :
@@ -185,24 +185,24 @@ Née le :
 
 
 
-    <% if @contrat.birthdate.present? %>
-    <%= @contrat.birthdate.strftime('%d/%m/%Y') %> à <% if @contrat.birthplace.present? %>
-    <%= @contrat.birthplace %><% end %>
-    <br/>Demeurant : <% if @contrat.adresse.present? %>
-    <%= @contrat.adresse %><% end %>
-    <br/>Nationalité : <% if @contrat.nationalite.present? %>
-    <%= @contrat.nationalite %> <% end %>
-    <br/>Numéro de sécurité social : <% if @contrat.nsecu.present? %>
-    <%= @contrat.nsecu %><% end %>
-    <br/><% if @contrat.permissejournum.present? %> Titulaire
-    permis de séjour du N° <%= @contrat.permissejournum %> délivré(e) le <%= @contrat.permissejourdate.strftime('%d/%m/%Y') %>  par la Préfecture <%= @contrat.permissejourloc %>, valable jusqu’au <%= @contrat.permissejourexp.strftime('%d/%m/%Y') %>
+    <% if @contrat.employee.datedenaissance.present? %>
+    <%= @contrat.employee.datedenaissance.strftime('%d/%m/%Y') %> à <% if @contrat.employee.lieudenaissance.present? %>
+    <%= @contrat.employee.lieudenaissance %><% end %>
+    <br/>Demeurant : <% if @contrat.employee.adresse.present? %>
+    <%= @contrat.employee.adresse %><% end %>
+    <br/>Nationalité : <% if @contrat.employee.nationalite.present? %>
+    <%= @contrat.employee.nationalite %> <% end %>
+    <br/>Numéro de sécurité social : <% if @contrat.employee.nsecu.present? %>
+    <%= @contrat.employee.nsecu %><% end %>
+    <br/><% if @contrat.employee.permissejournum.present? %> Titulaire
+    permis de séjour du N° <%= @contrat.employee.permissejournum %> délivré(e) le <%= @contrat.employee.permissejourdate.strftime('%d/%m/%Y') %>  par la Préfecture <%= @contrat.employee.permissejourloc %>, valable jusqu’au <%= @contrat.employee.permissejourexp.strftime('%d/%m/%Y') %>
     <% else %>
     <% end %>
     <% end %>
      </p>
     <p>Ci-après
     <!-- logique du sexe -->
-<% if @contrat.empcivilite.present? && @contrat.empcivilite == "Monsieur" %>
+<% if @contrat.employee.empcivilite.present? && @contrat.employee.empcivilite == "Monsieur" %>
 désigné le salarié.
 <% else %>
 désignée la salariée.
@@ -221,7 +221,7 @@ désignée la salariée.
 <div class="societe">
   <u><h4>ARTICLE 1: NATURE DU CONTRAT</h4></u>
   <p>
-   L’employeur engage <b><%= @contrat.empcivilite %> <%= @contrat.nom.capitalize %> <%= @contrat.prenom %></b>, en application des articles D. 1242-1,  L. 1242-1 et L. 1242-2 3° du Code du Travail, ainsi que par l’article 14 de la Convention collective nationale des Hôtels, Cafés Restaurant (HCR), par un contrat à durée déterminée d’usage, sous réserve de des résultats de la visite médicale d'information et de prévention (sauf si celle-ci n’est pas requise du fait de l’existence des conditions prescrites à l’article R.4624-15 du Code du travail).
+   L’employeur engage <b><%= @contrat.employee.empcivilite %> <%= @contrat.employee.nom.capitalize %> <%= @contrat.employee.prenom %></b>, en application des articles D. 1242-1,  L. 1242-1 et L. 1242-2 3° du Code du Travail, ainsi que par l’article 14 de la Convention collective nationale des Hôtels, Cafés Restaurant (HCR), par un contrat à durée déterminée d’usage, sous réserve de des résultats de la visite médicale d'information et de prévention (sauf si celle-ci n’est pas requise du fait de l’existence des conditions prescrites à l’article R.4624-15 du Code du travail).
   </p>
   <p>La visite d’information et de prévention devra être réalisée dans un délai qui n'excède pas trois mois à compter de la prise effective du poste de travail.
 </p>
@@ -238,7 +238,7 @@ Le présent contrat est conclu pour pourvoir de manière temporaire, en qualité
 </p>
 <p>La déclaration nominative préalable à l'embauche a été remise à l'Urssaf <%= @contrat.user.regionurssaf %></p>
 <p>
-  Conformément à la loi du 6 janvier 1978, <b><%= @contrat.empcivilite %> <%= @contrat.nom.capitalize %> <%= @contrat.prenom %></b> a un droit d’accès et de rectification aux informations portées sur ce document.
+  Conformément à la loi du 6 janvier 1978, <b><%= @contrat.employee.empcivilite %> <%= @contrat.employee.nom.capitalize %> <%= @contrat.employee.prenom %></b> a un droit d’accès et de rectification aux informations portées sur ce document.
 
 </p><br/>
 <u><h4>ARTICLE 3 : DUREE DU CONTRAT
@@ -246,7 +246,7 @@ Le présent contrat est conclu pour pourvoir de manière temporaire, en qualité
 </h4></u>
 
 <p>
-L’employeur embauche <b><%= @contrat.empcivilite %> <%= @contrat.nom.capitalize %> <%= @contrat.prenom %></b> à compter du <b><%= @contrat.jour1debut.strftime('%d/%m/%Y') %></b>, en qualité de <b><%= @contrat.nomposte %></b> pour une période de <b> <% if @contrat.jour1 == false %>
+L’employeur embauche <b><%= @contrat.employee.empcivilite %> <%= @contrat.employee.nom.capitalize %> <%= @contrat.employee.prenom %></b> à compter du <b><%= @contrat.jour1debut.strftime('%d/%m/%Y') %></b>, en qualité de <b><%= @contrat.nomposte %></b> pour une période de <b> <% if @contrat.jour1 == false %>
 Vous avez mal rempli le formulaire d'horaire !</b>
 <% elsif @contrat.jour1 == true && @contrat.jour2 == false %>
 1 </b> jour.
@@ -263,7 +263,7 @@ Vous avez mal rempli le formulaire d'horaire !</b>
 <% elsif @contrat.jour1 == true &&  @contrat.jour2 == true && @contrat.jour3 == true && @contrat.jour4 == true && @contrat.jour5 == true && @contrat.jour6 == true && @contrat.jour7 == true %>
 7</b> jours.
 <% else %>
-Vérifiez les jours que vous avez coché dans le formulair de planning! Une erreur est survenue.
+Vérifiez les jours que vous avez coché dans le formulaire de planning! Une erreur est survenue.
 <% end %>
 
 
@@ -304,14 +304,14 @@ Vérifiez les jours que vous avez coché dans le formulaire de planning! Une err
 <% else %>
 <u><h4>ARTICLE 4 : LA PERIODE D’ESSAI
 </h4></u>
-<p>Il est convenu que <b><%= @contrat.empcivilite %> <%= @contrat.nom.capitalize %> <%= @contrat.prenom %></b>  effectuera une période d’essai de <b>24 heures</b>.  (article L. 1242-10 du Code du Travail) qui expirera au plus tard le <b>
+<p>Il est convenu que <b><%= @contrat.employee.empcivilite %> <%= @contrat.employee.nom.capitalize %> <%= @contrat.employee.prenom %></b>  effectuera une période d’essai de <b>24 heures</b>.  (article L. 1242-10 du Code du Travail) qui expirera au plus tard le <b>
 
 </b> à minuit</p>
 <p>Il est précisé que la période d’essai s’entend d’une période de travail effectif. Toute suspension de l’exécution du contrat, quel qu’en soit le motif, entraînera une prolongation de la période d’essai d’une durée équivalente à celle de la suspension.
 </p>
 <p>Au cours de cette période, le contrat pourra être rompu par l'une ou l'autre des parties, à tout moment, sous réserve du délai de prévenance prévu aux articles L. 1221-25 et L. 1221-26 du Code du travail, soit :
 </p>
-<div class="alinea"><p>-  pour  <b><%= @contrat.empcivilite %> <%= @contrat.nom.capitalize %> <%= @contrat.prenom %></b>  : de 24 heures en deçà de 8 jours de présence et 48 heures au-delà.
+<div class="alinea"><p>-  pour  <b><%= @contrat.employee.empcivilite %> <%= @contrat.employee.nom.capitalize %> <%= @contrat.employee.prenom %></b>  : de 24 heures en deçà de 8 jours de présence et 48 heures au-delà.
 <br/>- pour l'employeur :
 <li>de 24 heures en deçà de 8 jours de présence,</li>
 <li>48 heures entre 8 jours et 1 mois,</li>
@@ -321,7 +321,7 @@ Vérifiez les jours que vous avez coché dans le formulaire de planning! Une err
 </p>
 <p>Toute rupture de la période d'essai, quel qu'en soit l'auteur, sera notifiée par écrit, soit par lettre remise en main propre contre récépissé ou adressée en recommandée avec demande d'avis de réception.
 </p>
-<p><b><%= @contrat.empcivilite %> <%= @contrat.nom.capitalize %> <%= @contrat.prenom %></b> s’engage à fournir pendant la période d’essai tous les éléments nécessaires pour constituer son dossier.</p>
+<p><b><%= @contrat.employee.empcivilite %> <%= @contrat.employee.nom.capitalize %> <%= @contrat.employee.prenom %></b> s’engage à fournir pendant la période d’essai tous les éléments nécessaires pour constituer son dossier.</p>
 
 <br/>
 <% end %>
@@ -330,15 +330,6 @@ Vérifiez les jours que vous avez coché dans le formulaire de planning! Une err
 <p>Il est toutefois précisé que le lieu de travail est donné à titre indicatif.</p>
 <br/>
 <u><h4>ARTICLE <% if @contrat.periodeessai == true %>5<% else %>6 <% end %> : REMUNERATION</h4></u>
-
-<p>En contrepartie de son activité, <b><%= @contrat.empcivilite %> <%= @contrat.nom.capitalize %> <%= @contrat.prenom %></b> percevra une rémunération brute de <b> <%= @contrat.remuneration %> euros</b>, pour
-
-
-
-
-
-  <b>
-
 <% nombreheure = 0 %>
 <% nombreheure = (@contrat.jour1fin - @contrat.jour1debut) if @contrat.jour1 == true %>
 <% nombreheure += (@contrat.jour2fin - @contrat.jour2debut) if @contrat.jour2 == true %>
@@ -347,6 +338,17 @@ Vérifiez les jours que vous avez coché dans le formulaire de planning! Une err
 <% nombreheure += (@contrat.jour5fin - @contrat.jour5debut) if @contrat.jour5 == true %>
 <% nombreheure += (@contrat.jour6fin - @contrat.jour6debut) if @contrat.jour6 == true %>
 <% nombreheure += (@contrat.jour7fin - @contrat.jour7debut) if @contrat.jour7 == true %>
+
+
+<p>En contrepartie de son activité, <b><%= @contrat.employee.empcivilite %> <%= @contrat.employee.nom.capitalize %> <%= @contrat.employee.prenom %></b> percevra une rémunération brute de <b> <%= @contrat.remuneration*nombreheure/3600 %> euros</b>, pour
+
+
+
+
+
+  <b>
+
+
 <%= nombreheure/3600 %>
 
 
@@ -357,7 +359,7 @@ heures
 
 <br/>
 <u><h4>ARTICLE <% if @contrat.periodeessai == true %>6<% else %>7 <% end %> : DUREE DU TRAVAIL</h4></u>
-<p>La durée hebdomadaire de travail de <b><%= @contrat.empcivilite %> <%= @contrat.nom.capitalize %> <%= @contrat.prenom %></b> est fixée à <b><%= nombreheure/3600 %></b> hfin selon la répartition suivante :
+<p>La durée hebdomadaire de travail de <b><%= @contrat.employee.empcivilite %> <%= @contrat.employee.nom.capitalize %> <%= @contrat.employee.prenom %></b> est fixée à <b><%= nombreheure/3600 %></b> hfin selon la répartition suivante :
 </p>
 <div class="alinea"><ul style="list-style-type:none">
 <% if @contrat.jour1 == true %> <li>- Le<b><%= @contrat.jour1debut.strftime('%d/%m/%Y') %></b>, de  <%= @contrat.jour1debut.strftime('%HH%M') %> à <%= @contrat.jour1fin.strftime('%HH%M') %>. </li> <% end %>
@@ -384,16 +386,16 @@ heures
 <li>des conditions météorologiques,</li>
 <li>de toute autre circonstance revêtant la nécessité d’une intervention rapide, non prévisible et qui ne peut être différée.</li>
 
-<p>Lorsque surviendra l'une des circonstances autorisant une nouvelle répartition, les conditions de cette modification seront notifiées à <b><%= @contrat.empcivilite %> <%= @contrat.nom.capitalize %> <%= @contrat.prenom %></b> sept jours au moins avant la date à laquelle la modification doit prendre effet, ramenés à 3 jours ouvrés en cas de circonstances exceptionnelles, par lettre recommandée avec AR ou par lettre remise en main propre contre décharge.</p>
+<p>Lorsque surviendra l'une des circonstances autorisant une nouvelle répartition, les conditions de cette modification seront notifiées à <b><%= @contrat.employee.empcivilite %> <%= @contrat.employee.nom.capitalize %> <%= @contrat.employee.prenom %></b> sept jours au moins avant la date à laquelle la modification doit prendre effet, ramenés à 3 jours ouvrés en cas de circonstances exceptionnelles, par lettre recommandée avec AR ou par lettre remise en main propre contre décharge.</p>
 
 <br/>
 <u><h4>ARTICLE <% if @contrat.periodeessai == true %>8<% else %>9 <% end %> : CONGES PAYES</h4></u>
 
-<p>En l’état de la nature du contrat ne permettant pas à <b> <%= @contrat.empcivilite %> <%= @contrat.nom.capitalize %> <%= @contrat.prenom %></b> de prendre effectivement ses congés, il lui sera versé mensuellement, une indemnité compensatrice de congés payés tel que précisé dans l’article intitulé « rémunération ».
+<p>En l’état de la nature du contrat ne permettant pas à <b> <%= @contrat.employee.empcivilite %> <%= @contrat.employee.nom.capitalize %> <%= @contrat.employee.prenom %></b> de prendre effectivement ses congés, il lui sera versé mensuellement, une indemnité compensatrice de congés payés tel que précisé dans l’article intitulé « rémunération ».
 </p>
 <br/>
 <u><h4>ARTICLE <% if @contrat.periodeessai == true %>9<% else %>10 <% end %> : OBLIGATIONS PROFESSIONNELLES</h4></u>
-<p>En l’état de la nature du contrat ne permettant pas à <b> <%= @contrat.empcivilite %> <%= @contrat.nom.capitalize %> <%= @contrat.prenom %></b>  s'engage à observer les dispositions réglementant les conditions de travail applicables à l’ensemble des salariés de <%= @contrat.user.formejuridique %> <%= @contrat.user.nomentreprise %> ainsi que les règles générales concernant la discipline et la sécurité du travail.</p>
+<p>En l’état de la nature du contrat ne permettant pas à <b> <%= @contrat.employee.empcivilite %> <%= @contrat.employee.nom.capitalize %> <%= @contrat.employee.prenom %></b>  s'engage à observer les dispositions réglementant les conditions de travail applicables à l’ensemble des salariés de <%= @contrat.user.formejuridique %> <%= @contrat.user.nomentreprise %> ainsi que les règles générales concernant la discipline et la sécurité du travail.</p>
 
 <p>Le salarié s'engage par ailleurs :
 <li>à se conformer aux directives et instructions émanant de la direction ou de son représentant ;
@@ -407,7 +409,7 @@ heures
 </li></p>
 <% if @contrat.video.present? %>
 
-<p><b><%= @contrat.empcivilite %> <%= @contrat.nom.capitalize %> <%= @contrat.prenom %></b> est informé qu’un système de vidéosurveillance a été mis en place, pour des raisons de sécurité et afin de se prémunir de vols éventuels, à l’extérieur et à l’intérieur de l’établissement.</p>
+<p><b><%= @contrat.employee.empcivilite %> <%= @contrat.employee.nom.capitalize %> <%= @contrat.employee.prenom %></b> est informé qu’un système de vidéosurveillance a été mis en place, pour des raisons de sécurité et afin de se prémunir de vols éventuels, à l’extérieur et à l’intérieur de l’établissement.</p>
 <p>Les images enregistrées sont exclusivement destinées à l’employeur et ne donneront pas lieu à constitution d’un fichier nominatif.
 </p>
 <p>Le dispositif installé peut servir à surveiller l’activité du personnel ou toute personne située dans l’enceinte de la société et ses dépendances.
@@ -422,11 +424,11 @@ heures
 <br/>
 <u><h4>ARTICLE <% if @contrat.periodeessai == true %>10<% else %>11 <% end %> : RUPTURE ANTICIPEE DU CONTRAT
 </h4></u>
-<p>Conformément aux dispositions légales actuellement applicables et sous réserve de leur modification, après la période d’essai, le présent contrat ne pourra être résilié avant le terme convenu, sauf accord des parties, qu’en cas de faute grave, lourde, de force majeure, inaptitude constatée par le Médecin du travail ou si <b><%= @contrat.empcivilite %> <%= @contrat.nom.capitalize %> <%= @contrat.prenom %></b> peut justifier de la conclusion d’un contrat à durée indéterminée. Dans ce dernier cas, <b><%= @contrat.empcivilite %> <%= @contrat.nom.capitalize %> <%= @contrat.prenom %></b> devra respecter un préavis dont la durée sera calculée conformément à l'article L. 1243-2 du Code du travail.
+<p>Conformément aux dispositions légales actuellement applicables et sous réserve de leur modification, après la période d’essai, le présent contrat ne pourra être résilié avant le terme convenu, sauf accord des parties, qu’en cas de faute grave, lourde, de force majeure, inaptitude constatée par le Médecin du travail ou si <b><%= @contrat.employee.empcivilite %> <%= @contrat.employee.nom.capitalize %> <%= @contrat.employee.prenom %></b> peut justifier de la conclusion d’un contrat à durée indéterminée. Dans ce dernier cas, <b><%= @contrat.employee.empcivilite %> <%= @contrat.employee.nom.capitalize %> <%= @contrat.employee.prenom %></b> devra respecter un préavis dont la durée sera calculée conformément à l'article L. 1243-2 du Code du travail.
 
 
 </p>
-<p>En dehors de ces hypothèses la rupture anticipée du contrat de travail à durée déterminée qui intervient à l’initiative de <b><%= @contrat.empcivilite %> <%= @contrat.nom.capitalize %> <%= @contrat.prenom %></b> en dehors des cas prévus aux articles L. 1243-1 et L. 1243-2 du Code du travail ouvre droit pour l’employeur à des dommages et intérêts correspondant au préjudice subi.</p>
+<p>En dehors de ces hypothèses la rupture anticipée du contrat de travail à durée déterminée qui intervient à l’initiative de <b><%= @contrat.employee.empcivilite %> <%= @contrat.employee.nom.capitalize %> <%= @contrat.employee.prenom %></b> en dehors des cas prévus aux articles L. 1243-1 et L. 1243-2 du Code du travail ouvre droit pour l’employeur à des dommages et intérêts correspondant au préjudice subi.</p>
 
 <br/>
 <u><h4>ARTICLE <% if @contrat.periodeessai == true %>11<% else %>12 <% end %> : RUPTURE ANTICIPEE DU CONTRAT
