--- a/app/assets/stylesheets/pages/_logform.scss
+++ b/app/assets/stylesheets/pages/_logform.scss
@@ -1,11 +1,31 @@
 @media(min-width: 600px){
   .logbox{
   padding: 20px;
-  width: 80% !important;
+  width: 90% !important;
   }
 }
 
   .logbox{
+    padding: 20px;
+    width: 90vw;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    background-color: white;
+    min-height: calc(100vh - 110px);
+    margin: auto;
+    margin-top: 10px;
+    margin-bottom: 10px;
+  }
+
+
+@media(min-width: 600px){
+  .logbox-contrat{
+  padding: 20px;
+  width: 50% !important;
+  }
+}
+
+  .logbox-contrat{
+    border-radius: 5px;
     padding: 20px;
     width: 90vw;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
@@ -15,6 +35,10 @@
     margin-bottom: 20px;
     min-height: calc(100vh - 110px);
   }
+
+
+
+
 
 @media(min-width: 600px){
   .logbox1{
