--- a/app/views/employees/index.html.erb
+++ b/app/views/employees/index.html.erb
@@ -7,7 +7,8 @@
     <%= emp.nom %>
     <%= emp.prenom %>
     <%= link_to ' Modifier employée', edit_employee_path(emp), class: 'btn btn-medium btn-lg pull-right margin' %>
-    <%= link_to ' Nouveau contrat',  new_employee_contrat_path(emp), class: 'btn btn-medium btn-lg pull-right margin'   %>
+    <%= link_to ' Nouveau contrat Exta',  new_employee_contrat_path(emp), class: 'btn btn-medium btn-lg pull-right margin'   %>
+    <%= link_to ' Nouveau contrat CDD Saisonnier',  new_employee_contratcdd_path(emp), class: 'btn btn-medium btn-lg pull-right margin'   %>
     <%= link_to ' Supprimer employée',  employee_path(emp), method: :delete, class: 'btn btn-medium btn-lg pull-right margin',  data: { confirm: 'Confirmation' }   %>
 
 
