--- a/app/views/contratcdds/_form.html.erb
+++ b/app/views/contratcdds/_form.html.erb
@@ -16,21 +16,26 @@
 
       <center><h3>Nouveau contrat</h3></center>
     <%= f.input :remuneration, label: "Salaire horaire" %>
+    <%= f.input :heurehebdo, label: "Nombre d'heure hebdomadaire" %>
       <%= f.input :nomposte, collection: [ "Serveur", "Chef de rang", "Runner"] ,  selected: "Serveur", label: "Intitulé du poste" %>
 
 
 <!--         <input type="checkbox" checked data-toggle="toggle"> -->
 
 
- <%= f.input :debut, as: :datetime_picker,label: "Début du contrat",  wrapper: :ranged_datetime %>
 
 
 
 
 
 
+<div class="container"><div class="row">
+  <div class="col-sm-3">   <b>Date de début:</b> <br/>     <%= f.input_field :debut, as: :string, class: 'datepicker text-center form-control' %>
+</div>
+<div class="col-sm-3">  <b>Date de fin:</b> <br/>       <%= f.input_field :fin, as: :string, class: 'datepicker text-center form-control'%>
+</div>
+</div></div>
 
-    <%= f.input :fin, as: :datetime_picker, label: "Fin du contrat", wrapper: :ranged_datetime %>
 
 
 
