--- a/app/views/contratcdds/reporte.pdf.erb
+++ b/app/views/contratcdds/reporte.pdf.erb
@@ -296,7 +296,7 @@ des conditions prescrites à l’article R.4624-15 du Code du travail).
 <u><h4>ARTICLE 4 :  Rémuneration
 </h4></u>
 
-<p>La rémunération mensuelle brute de <b><%= @contratcdd.employee.empcivilite %> <%= @contratcdd.employee.nom.capitalize %> <%= @contratcdd.employee.prenom %></b> est fixée à <b><%= @contratcdd.remuneration %> euros</b>  pour <b><%= @contratcdd.heurehebdo %> </b> heures mensuelles.
+<p>La rémunération mensuelle brute de <b><%= @contratcdd.employee.empcivilite %> <%= @contratcdd.employee.nom.capitalize %> <%= @contratcdd.employee.prenom %></b> est fixée à <b><%= @contratcdd.remuneration %> euros</b>  pour <b><%= @contratcdd.heurehebdo %> </b> heures hebdomadaires.
 </p>
 <p>
   <% if @contratcdd.heurehebdo > 35 %>
